--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "objection": "^3.0.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.7.0",
-    "typeorm": "^0.3.14"
+    "tsyringe": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
