--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
       "@common/*": ["app/common/*"],
       "@helpers/*": ["helpers/*"],
       "@providers/*": ["providers/*"],
-      "@infra/*": ["infra/*"]
+      "@infra/*": ["infra/*"],
+      "@modules/*": ["app/modules/*"]
     },                                    /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
