--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "knex": "^2.4.2",
     "objection": "^3.0.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.7.0"
+    "tsyringe": "^4.7.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
