--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "objection": "^3.0.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.6.1",
     "tsyringe": "^4.7.0",
     "zod": "^3.21.4"
   },
